changing linkedlist to lists - more generics